added basic php functionality

--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
     </div>
   </section>
 
+  <!-- heat timer modal -->
+
+
   <!-- content -->
   <div class="container">
     <section class="row">
       <div class="col-sm-6">
       <h3>Custom Engine Heater Timers</h3>
       <div id="timers">
-        <div class="timer">Tidlig (07:30)<a href="#" onclick="toggleTimer(this)" class="float-right"><i class="fas fa-edit"></i><span>Edit</span></a></div>
-        <div class="timer">Tirsdager (09:30)<a href="#" class="float-right"><i class="fas fa-edit"></i><span>Edit</span></a></div>
-        <!-- <div class="timer"></div> -->
+        <div class="timer">Tidlig (07:30)<button type="button" onclick="toggleTimer(this)" class="float-right btn btn-info"><i class="fas fa-edit"></i><span>Edit</span></button></div>
+
+        <div class="timer">Tirsdager (09:30)<button type="button" class="float-right btn btn-info"><i class="fas fa-edit"></i><span>Edit</span></button></div>
       </div>
       </div>
     </section>
